packages/compiler-rs/tests/snapshots/v_if__basic.snap
---
source: tests/v_if.rs
expression: code
---
import { setNodes as _setNodes } from "vue-jsx-vapor";
import { child as _child, createIf as _createIf, template as _template } from "vue";
const t0 = _template("<div> </div>");
(() => {
  const n0 = _createIf(() => ok, () => {
    const n2 = t0();
    const x2 = _child(n2);
    _setNodes(x2, () => msg);
    return n2;
  });
  return n0;
})();
