packages/compiler-rs/tests/snapshots/v_if__component.snap
---
source: tests/v_if.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
import { createIf as _createIf } from "vue";
(() => {
  const n0 = _createIf(() => foo, () => {
    const n2 = _createComponent(Comp);
    return n2;
  });
  return n0;
})();
