packages/compiler-rs/tests/snapshots/v_if__dedupe_same_template.snap
---
source: tests/v_if.rs
expression: code
---
import { createIf as _createIf, template as _template } from "vue";
const t0 = _template("<div>hello</div>");
(() => {
  const n0 = _createIf(() => ok, () => {
    const n2 = t0();
    return n2;
  });
  const n3 = _createIf(() => ok, () => {
    const n5 = t0();
    return n5;
  });
  return [n0, n3];
})();
