packages/compiler-rs/tests/snapshots/v_if__template.snap
---
source: tests/v_if.rs
expression: code
---
import { child as _child, createIf as _createIf, renderEffect as _renderEffect, setText as _setText, template as _template, toDisplayString as _toDisplayString } from "vue";
const t0 = _template("<div></div>");
const t1 = _template("hello");
const t2 = _template("<p> </p>");
(() => {
  const n0 = _createIf(() => ok, () => {
    const n2 = t0();
    const n3 = t1();
    const n4 = t2();
    const x4 = _child(n4);
    _renderEffect(() => _setText(x4, _toDisplayString(msg)));
    return [
      n2,
      n3,
      n4
    ];
  });
  return n0;
})();
